src/assets/css/library.css
#mainDivLibrary {
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.categoriesDivScroller {
    width: 80%;
}

.categoriesDivScroller .scroller_inner {
    display: flex;
    padding-block: 10px; flex-wrap: wrap;
    gap: 10px;
}

.categoriesDivScroller .ulCategoriesTagList {
    width: 100%;
    position: relative;
    scrollbar-width: none;
}

.categoriesDivScroller .liCategoriesLibrary {
    white-space: nowrap;
    padding: 2px 12px;
    border-radius: 5px;
    box-shadow: rgba(0, 0, 0, 0.05) 2px 4px 5px;
    transition: filter 0.2s ease-in-out;
}

.categoriesDivScroller .liCategoriesLibrary:hover {
    cursor: pointer;
    filter: saturate(150%) brightness(110%);
}

.categoriesDivScroller .ulCategoriesLibrary::-webkit-scrollbar {
    display: none;
}

.categoriesDivScroller[data-animated="true"] {
    overflow: hidden;
    mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
}

.categoriesDivScroller[data-animated="true"] .ulCategoriesTagList {
    flex-wrap: nowrap;
    width: fit-content;
    animation: scroll var(--animation-duration, 350s) var(--animation-direction, forwards) linear infinite;
}

.categoriesDivScroller[data-direction="right"] {
    --animation-direction: reverse;
}

.categoriesDivScroller[data-direction="left"] {
    --animation-direction: forwards;
}

#divCategorySelected {
    padding: 2px 12px;
    border-radius: 5px;
    color: white;
    margin-top: 15px;
    gap: 5px;
    display: flex;
}

#divCategorySelected:hover {
    background-color: rgba(255, 0, 0, 0.8) !important;
    cursor: pointer;
}

@keyframes scroll {
    100% {
        transform: translate(calc(-50% - 0.5rem));
    }
}

#divSearchInputLibrary {
    height: 30px;
    width: 450px;
    margin-bottom: 20px;
    position: relative;
    display: flex;
}

#divSearchInputLibrary input {
    border: 1px solid lightgray;
    border-radius: 20px;
    padding: 0px 40px;
    width: 100%;
    height: 100%;
}

#divSearchInputLibrary #iconSearchLibrary {
    height: 100%;
    padding: 8px;
    margin-left: 5px;
    display: flex;
    width: auto;
    position: absolute;
}

#divSearchInputLibrary #iconXLibrary {
    position: absolute;
    display: flex;
    right: 0px;
    height: 100%;
    width: 20px;
    margin-right: 10px;
}

#divSearchInputLibrary #iconXLibrary svg {
    height: 100%;
    padding: 4px;
    transition: fill 0.1s ease-in-out;
}

#divSearchInputLibrary #iconXLibrary:hover {
    cursor: pointer;
    & svg path {
        fill: red;
    }
}

#divSearchInputLibrary #iconSearchLibrary:hover {
    cursor: text;
}

#insideDivLibrary {
    margin-top: 40px;
    display: flex;
    justify-content: space-evenly;
    flex-direction: row;
}

#insideDivLibrary .divBooks {
    width: 200px;
    height: 450px;
    display: flex;
    flex-direction: column;
}

#insideDivLibrary .divImageBooks {
    display: flex;
    justify-content: center;
    height: 380px;
    transition-property: transform, filter;
    transition-duration: 0.5s;
    transition-timing-function: ease-out;
    animation: 2s linear 0s infinite normal none running skeleton-books;
}

@keyframes skeleton-books {
    0% {
        background-color: rgb(225, 225, 225);
    }

    50% {
        background-color: rgb(202, 202, 202);
    }

    100% {
        background-color: rgb(225, 225, 225);
    }
}

#insideDivLibrary .divImageBooks:hover {
    cursor: pointer;
    transform: scale(1.05);
    filter: brightness(102%);
    transition: transform 0.1s ease-in;
}

#insideDivLibrary .divImageBooks img {
    width: 100%;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.1) 0px 8px 10px -6px;
}

#insideDivLibrary .divDetailsBooks {
    margin-top: 10px;
}

#insideDivLibrary .divTitleBooks {
    height: 55px;
    overflow-x: auto;
    scrollbar-width: none;
    transition: color 1s ease-out;
}

#insideDivLibrary .divTitleBooks:hover {
    cursor: pointer;
    color: rgb(36, 101, 255);
    transition: color;
}

#insideDivLibrary .divTitleBooks::-webkit-scrollbar {
    display: none;
}

#insideDivLibrary .bookTitleSpan {
    font-weight: bold;
    font-size: 1.1rem;
}

#insideDivLibrary .authorsUlBooks {
    display: flex;
    gap: 10px;
    white-space: nowrap;
    overflow-x: auto;
    scrollbar-width: none;
}

#insideDivLibrary .authorsUlBooks::-webkit-scrollbar {
    display: none;
}

#insideDivLibrary .authorLiBooks {
    color: rgb(0, 104, 255);
    font-size: 1.2rem;
    transition: color 1s ease-out;
    flex-shrink: 0;
}

#insideDivLibrary .authorLiBooks:hover {
    color: rgb(98, 160, 250);
    cursor: pointer;
    transition: color;
}

#insideDivLibrary .categoryUlBooks {
    display: flex;
    gap: 10px;
    overflow-x: auto;
    margin-top: 8px;
    scrollbar-width: none;
}

#insideDivLibrary .categoryUlBooks::-webkit-scrollbar {
    display: none;
}

#insideDivLibrary .categoryLiBooks {
    flex-shrink: 0;
    padding: 2px 12px;
    border-radius: 5px;
    font-size: 0.8rem;
}

#divPackPaginationLibrary {
    display: flex;
    gap: 15px;
}

#divLibraryPagination {
    margin: 80px 0px;
    display: flex;
    gap: 20px;
}

#divNumbersPagination {
    display: flex;
    align-items: center;
}

#divLibraryPagination .arrowsPagination {
    color: rgb(0, 104, 255);
    transition: color 0.2s ease-in-out;
}

#divLibraryPagination .arrowsPagination:hover {
    cursor: pointer;
    color: rgb(70, 143, 251);
}

#divLibraryPagination .ulPaginationLibrary {
    display: flex;
    font-size: 1.3rem;
    gap: 10px;
}

#divLibraryPagination .liPaginationLibrary {
    color: rgb(0, 104, 255);
    transition: color 0.2s ease-in-out;
}

#divLibraryPagination .liPaginationLibrary:hover {
    cursor: pointer;
    color: rgb(70, 143, 251);
}

#divLibraryPagination .divArrowsLibrary {
    display: flex;
    align-items: center;
    gap: 6px !important;
}
/* ... */

